<resources>
    <string name="app_name">ToDoList</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action">Action</string>
    <string-array name="lists">
        <item>ToBye</item>
        <item>Habit</item>
        <item>ToRead</item>
        <item>ToSee</item>
        <item>ToDo</item>
        <item>ToGet</item>
        <item>Passwords</item>
    </string-array>
    <string name="title_activity_bye">bye</string>

    <string name="add_record">Add record</string>
    <string name="delete_record">Delete record</string>
    <string name="next_bye">Next bye</string>
    <string name="priority">Priority</string>
    <string name="delete_long">Long tap for delete item</string>
    <string name="title_activity_film">film</string>

    <string name="add_film_str">Add film</string>
    <string name="add_zhanr_str">Zhanr</string>
    <string name="title_activity_read">read</string>

    <string name="add_read_str">Add book</string>
    <string name="author">Author</string>
    <string name="title_activity_password">Password</string>

    <string name="add_site">Add site</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="title_activity_todo">todo</string>

    <string name="Todo">To do</string>
    <string name="Indate">In date</string>
    <string name="InTime">In time</string>
    <string name="goal">Add goal</string>
    <string name="title_activity_toget">toget</string>



</resources>
