<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.shasta.todolist.todo$todoFragment">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerVertical="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:weightSum="1">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:id="@+id/listViewtodo"
        android:layout_weight="1"
        android:headerDividersEnabled="false"
        android:longClickable="true"
        android:clickable="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/lay">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Todo"
            android:id="@+id/textView12" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edittodo"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/InTime"
            android:id="@+id/textView13" />

        <EditText
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:inputType="datetime"
            android:ems="10"
            android:id="@+id/edittodotime"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/add_record"
        android:id="@+id/buttonaddtodo"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
    </RelativeLayout>