<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.shasta.todolist.film$filmFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:weightSum="1">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:id="@+id/listViewFilm"
            android:layout_weight="1"
            android:headerDividersEnabled="false"
            android:clickable="true"
            android:longClickable="true" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_film_str"
                android:id="@+id/textView4" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editfilmtext"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_zhanr_str"
                android:id="@+id/textView5" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editfilmzhanr"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/add_record"
            android:id="@+id/film_add_butt"
            android:layout_gravity="center_horizontal"
            android:longClickable="true"
            android:clickable="true" />

    </LinearLayout>
</RelativeLayout>
